--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,9 @@
 }
 
 body {
-    background-color: rgb(228, 190, 223);
+    background-color: rgb(58, 223, 209);
+    color: blue;
+    text-decoration-color: #00ff00ff;
     font-family: "Audiowide", sans-serif;
 }
 
